[package]
name = "semsimian"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "semsimian"
crate-type = ["cdylib", "lib"]

[dependencies]
csv = "1.1.6"
dict = "0.1.5"
generator = "0.7.2"
ordered-float = "4.1.0"
pyo3 = { version = "*", features = ["extension-module"] }
indicatif = "*" # progress bar
lazy_static = "1.4.0"
cargo-llvm-cov = "0.5.19"
rayon = "1.7.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "*"
deepsize = "*"

[features]
ci = []

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
flamegraph = "0.6.3"
rstest = "*"

[[bench]]
name = "termset_pairwise_similarity_benchmark"
harness = false

[[bench]]
name = "association_full_search_benchmark"
harness = false

[[bench]]
name = "association_flat_search_benchmark"
harness = false

[[bench]]
name = "association_hybrid_search_benchmark"
harness = false

[[bench]]
name = "association_search_similarity_benchmark"
harness = false